--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -66,6 +66,7 @@
     display: flex;
     align-items:center;
     gap: 10px;
+    color: lightgray;
 }
 
 .headerSearchInput {
@@ -76,4 +77,46 @@
 .headerSearchText {
     color: lightgray;
     cursor: pointer;
+}
+
+.date {
+    position: absolute;
+    top: 50px;
+}
+
+.options{
+    position: absolute;
+    top: 50px;
+    background-color: white;
+    color: gray;
+    border-radius: 5px;
+    border: solid lightgray 1px;
+}
+
+.optionItem {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.optionCounter {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 12px;
+    color: black;
+}
+
+.optionCounterButton {
+    width: 30px;
+    height: 30px;
+    border: solid #0071c2 1px;
+    color: #0071c2;
+    cursor: pointer;
+    background-color: white;
+}
+
+.optionCounterButton:disabled{
+    cursor: not-allowed;
 }
